k8s/deployment/blue-green/green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-green
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: springboot-app-green
  template:
    metadata:
      labels:
        app: springboot-app-green
    spec:
      containers:
      - name: springboot-container
        image: somkiat/api:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m #10%
            memory: 300Mi
          limits:
            cpu: 300m #30%
            memory: 500Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-green
spec:
  selector:
    app: springboot-app-green
  ports:
  - name: http
    port: 8080
    targetPort: 8080
