k8s/deployment/blue-green/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /api-blue(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-blue
            port:
              number: 8080
      - path: /api-green(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-green
            port:
              number: 8080
